<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimpleReboot</string>
    <string name="action_settings">Settings</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_summary">Restart your device.</string>
    <string name="reboot_recovery">Reboot to recovery</string>
    <string name="reboot_recovery_summary">Restart and boot into your device\'s recovery.</string>
    <string name="reboot_bootloader">Reboot to the bootloader</string>
    <string name="reboot_bootloader_summary">Restart and boot to your bootloader. This might or might not work depending on the device\'s OEM implementation.</string>
    <string name="about_author">SimpleReboot</string>
    <string name="about_author_summary">Tap to check my other apps</string>
    <string name="root_status">Root status</string>
    <string name="root_status_no">Root not available - this app won\'t work properly</string>
    <string name="root_status_yes">Available.</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="soft_reboot_summary">Solely restarts the Android UI by killing zygote process.</string>
    <string name="reboot_safe_mode">Reboot into safe mode</string>
    <string name="reboot_safe_mode_summary">Special mode to help you debug issues (for example you installed an app that might be misbehaving) by loading a barebones Android installation.</string>
    <string name="shutdown">Shutdown</string>
    <string name="shutdown_summary">Turns your device off.</string>
    <string name="close">Close</string>
</resources>
