<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="invisible"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/dialogElevation"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shutdown"
                style="@style/TextViewItems"
                android:drawableTop="@drawable/ic_power_off"
                android:drawablePadding="8dp"
                android:text="@string/shutdown" />

            <TextView
                android:id="@+id/reboot"
                style="@style/TextViewItems"
                android:drawableTop="@drawable/ic_restart"
                android:drawablePadding="8dp"
                android:text="@string/reboot" />

            <TextView
                android:id="@+id/restart_systemui"
                style="@style/TextViewItems"
                android:text="@string/restart_systemui" />

            <TextView
                android:id="@+id/soft_reboot"
                style="@style/TextViewItems"
                android:text="@string/soft_reboot" />

            <TextView
                android:id="@+id/reboot_recovery"
                style="@style/TextViewItems"
                android:text="@string/reboot_recovery" />

            <TextView
                android:id="@+id/reboot_bootloader"
                style="@style/TextViewItems"
                android:text="@string/reboot_bootloader" />

            <TextView
                android:id="@+id/reboot_safe_mode"
                style="@style/TextViewItems"
                android:text="@string/reboot_safe_mode" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>